<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_fragment_create_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_fragment_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/family_fragment_create_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_fragment_create_user_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/family_fragment_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/family" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/national_code_fragment_create_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/family_fragment_create_user_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/national_code_fragment_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/national_code" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:id="@+id/coding_fragment_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/coding"
        app:layout_constraintTop_toBottomOf="@id/national_code_fragment_create_user_layout" />

    <RadioButton
        android:id="@+id/gaming_fragment_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gaming"
        app:layout_constraintTop_toBottomOf="@id/coding_fragment_create_user" />

    <RadioButton
        android:id="@+id/movie_fragment_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie"
        app:layout_constraintTop_toBottomOf="@id/gaming_fragment_create_user" />

    <RadioButton
        android:id="@+id/sport_fragment_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sport"
        app:layout_constraintTop_toBottomOf="@id/movie_fragment_create_user" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_user_fragment_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sport_fragment_create_user" />

</androidx.constraintlayout.widget.ConstraintLayout>