<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_fragment_search_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/search_fragment_search_user_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_view_sample" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_fragment_search_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/radio_group_fragment_search_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_fragment_search_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/input_query" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_fragment_search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/firs_name_fragment_search_user"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/search_button_fragment_search_user">

        <RadioButton
            android:id="@+id/firs_name_fragment_search_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <RadioButton
            android:id="@+id/last_name_fragment_search_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <RadioButton
            android:id="@+id/national_code__fragment_search_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/national_code" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button_fragment_search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_user"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>